top nav z-index fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,8 @@
 
 body{
   background-color: $background-color;
+  padding-top: 0px;
+  margin-top: 0px;
 }
 
 h1,h2,h3,h4,h5,h6{
