--- a/app/assets/stylesheets/components/_landing_banner.scss
+++ b/app/assets/stylesheets/components/_landing_banner.scss
@@ -38,7 +38,7 @@
     width: 100%;
     float: left;
     position: relative;
-    outline: 1px solid yellow;
+    outline: 0px solid #fff;
   }
 
   .heading-inset {
