--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   background-color: transparent;
+  z-index: 99;
 }
 
 .navbar-lewagon .navbar-collapse {
