--- a/app/assets/stylesheets/config/_raibuon_variables.scss
+++ b/app/assets/stylesheets/config/_raibuon_variables.scss
@@ -5,7 +5,7 @@ $ui-nav-icons-yoffset: $ui-nav-icons-size + 17px;
 $banner_items_indent: 20%;
 
 .wireframe {
-  outline: 1px solid #fff;
+  outline: 0px solid #fff;
 }
 
 .ro-container {
